src/objects/PAC_Product_Map__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAC_Product__c</fullName>
        <label>PAC Product</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PAC Product Maps</relationshipLabel>
        <relationshipName>PAC_Product_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZProduct</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected ZProduct is Deleted</errorMessage>
            <filterItems>
                <field>zqu__ZProduct__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>PAC Product Maps</relationshipLabel>
        <relationshipName>PAC_Product_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PAC Product Map</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>PAC Product Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAC Product Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PAC_Product__c</columns>
        <columns>ZProduct__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>